Created the console Page, added a basic controller and cleaned up the directories.

--- a/Stella Commerce/Stella Commerce.csproj
+++ b/Stella Commerce/Stella Commerce.csproj
@@ -13,4 +13,8 @@
     <WarningLevel>7</WarningLevel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="web\resource\" />
+  </ItemGroup>
+
 </Project>
